# auto-wallpapers

./: .gitignore  deviantart-dl.sh  gallery-dl.config.json.example  images-currently-present.list  images-ever-seen.list  images-ever-seen.list.old  images-removed.list  images-removed.list.old  optimize.txt  pyproject.toml  unzip-archives.sh
gallery-dl/deviantart/kirokaze/: deviantart_567668731_Bannerman.swf
