[tool.poetry]
name = "auto-wallpaper-dl"
version = "0.1.0"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gallery-dl = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
